<resources>
    <string name="app_name">Subsidio en Transparencia</string>
    <string name="web_url_year">https://sep.subsidioentransparencia.mx/%d</string>
    <string name="text_downloading_file">Descargando archivo…</string>
    <string name="text_file_downloaded">Archivo descargado</string>
    <string name="text_go_to_transparencia_platform">SEP Subsidio en Transparencia</string>
    <string name="title_year">Subsidio Ordinario 2021 </string>
    <string name="text_amount_total_title">Totales</string>
    <string name="text_contact">Contacto SEP - DGESUI</string>
    <string name="text_contact_des">Dirección General de Educación Superior Universitaria e Intercultural – Subsecretaría de Educación Superior – Secretaría de Educación Pública.</string>
    <string name="text_contact_dir">Av. Universidad 1200, Colonia Xoco, Alcaldia Benito Juárez, C.P. 03330, Ciudad de México.</string>
    <string name="text_contact_tel">Teléfono:</string>
    <string name="text_contact_ext">Extensiones 65903 y 65906</string>
    <string name="text_contact_corr">subsidioentransparencia@nube.sep.gob.mx</string>
    <string name="text_filter_tilte">Todos los filtros </string>
    <string name="text_filter">Aplica filtros a tu consulta</string>
    <string name="text_filter_year">Año a consultar</string>
    <string name="text_filter_category">Categorias </string>
    <string name="text_filter_state">Estados </string>
    <string name="SeleccionAño">Selecciona Año</string>
    <string-array name="SeleccionClasificacion">
        <item>UPE</item>
        <item>UPES</item>
        <item>UI</item>
    </string-array>
    <string-array name="SeleccionUI">
        <item>Guerrero</item>
        <item>Hidalgo</item>
        <item>México</item>
        <item>Michoacán de Ocampo</item>
        <item>Puebla</item>
        <item>Quintana Roo</item>
        <item>San Luis Potosí</item>
        <item>Sinaloa</item>
        <item>Tabasco</item>
        <item>Chiapas</item>
    </string-array>
    <string-array name="SeleccionUPEAS">
        <item>México</item>
        <item>Michoacán de Ocampo</item>
        <item>Morelos</item>
        <item>Oaxaca</item>
        <item>Puebla</item>
        <item>Quintana Roo</item>
        <item>Sonora</item>
        <item>Tabasco</item>
        <item>Yucatán</item>
        <item>Campeche</item>
        <item>Chiapas</item>
        <item>Chihuahua</item>
    </string-array>
    <string-array name="SeleccionUPE">
        <item>Durango</item>
        <item>Guanajuato</item>
        <item>Guerrero</item>
        <item>Hidalgo</item>
        <item>Jalisco</item>
        <item>México</item>
        <item>Michoacán de Ocampo</item>
        <item>Morelos</item>
        <item>Nayarit</item>
        <item>Nuevo León</item>
        <item>Oaxaca</item>
        <item>Puebla</item>
        <item>Querétaro</item>
        <item>Quintana Roo</item>
        <item>San Luis Potosí</item>
        <item>Sinaloa</item>
        <item>Sonora</item>
        <item>Tabasco</item>
        <item>Tamaulipas</item>
        <item>Tlaxcala</item>
        <item>Veracruz de Ignacio de la Llave</item>
        <item>Yucatán</item>
        <item>Zacatecas</item>
        <item>Aguascalientes</item>
        <item>Baja California</item>
        <item>Baja California Sur</item>
        <item>Campeche</item>
        <item>Chiapas</item>
        <item>Chihuahua</item>
        <item>Coahuila de Zaragoza</item>
        <item>Colima</item>

    </string-array>
    <string-array name="SeleccionAll">
        <item>Durango</item>
        <item>Guanajuato</item>
        <item>Guerrero</item>
        <item>Hidalgo</item>
        <item>Jalisco</item>
        <item>México</item>
        <item>Michoacán de Ocampo</item>
        <item>Morelos</item>
        <item>Nayarit</item>
        <item>Nuevo León</item>
        <item>Oaxaca</item>
        <item>Puebla</item>
        <item>Querétaro</item>
        <item>Quintana Roo</item>
        <item>San Luis Potosí</item>
        <item>Sinaloa</item>
        <item>Sonora</item>
        <item>Tabasco</item>
        <item>Tamaulipas</item>
        <item>Tlaxcala</item>
        <item>Veracruz de Ignacio de la Llave</item>
        <item>Yucatán</item>
        <item>Zacatecas</item>
        <item>Aguascalientes</item>
        <item>Baja California</item>
        <item>Baja California Sur</item>
        <item>Campeche</item>
        <item>Chiapas</item>
        <item>Chihuahua</item>
        <item>Coahuila de Zaragoza</item>
        <item>Colima</item>

    </string-array>
    <string name="text_detalle_numeralia_title">Numeralia</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="no_disponible">(No disponible)</string>
    <string name="fecha_estipulada">Fecha estipulada⁷</string>
    <string name="label_cumplimiento">Cumplimiento</string>
    <string name="label_cumplio">Cumplió</string>
    <string name="label_no_cumplio">No cumplió</string>
    <string name="label_en_revision">En revisión</string>
    <string name="label_observaciones">Observaciones</string>
    <string name="label_referencias">Referencias</string>
    <string name="back_button_description">atrás</string>
    <string name="materiales_suministros">Materiales y Suministros  Acciones</string>
    <string name="servicios_generales">Servicios Generales: Acciones</string>
    <string name="asignaciones_subsidios">Asignaciones, Subsidios y otras Ayudas</string>
    <string name="bienes_muebles_inmuebles">Bienes muebles e inmuebles</string>
    <string name="obras_remodelaciones">Obras y remodelaciones</string>
    <string name="ir_a_pagina">Ir a la página</string>
    <string name="label_incompleta">Incompleta</string>
    <string name="label_complementada">Complementada</string>
    <string name="label_extemporanea">Extemporánea</string>
</resources>