<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardBodySimple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/style_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/cardTitleCumplimientoSimple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:font="@font/montserrat_bold"
            android:text="@string/label_cumplimiento"
            android:textColor="@color/gob_pink"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/circuloCumplimientoSimple"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="60dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardTitleCumplimientoSimple" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/cardKeysSimple"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardBodySimple">

        <androidx.cardview.widget.CardView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@color/green"
            app:cardCornerRadius="60dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/label_cumplio"
            android:textColor="@color/gob_dark"
            android:textSize="10sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@color/red"
            app:cardCornerRadius="60dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/label_no_cumplio"
            android:textColor="@color/gob_dark"
            android:textSize="10sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:cardBackgroundColor="@color/yellow"
            app:cardCornerRadius="60dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/label_en_revision"
            android:textColor="@color/gob_dark"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardKeysExtraSimple"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardKeysSimple"
        tools:visibility="visible">

        <androidx.cardview.widget.CardView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@color/gob_red_dark"
            app:cardCornerRadius="60dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/label_incompleta"
            android:textColor="@color/gob_dark"
            android:textSize="10sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@color/green_extra_dark"
            app:cardCornerRadius="60dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/label_complementada"
            android:textColor="@color/gob_dark"
            android:textSize="10sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:cardBackgroundColor="@color/gob_pink"
            app:cardCornerRadius="60dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/label_extemporanea"
            android:textColor="@color/gob_dark"
            android:textSize="10sp" />

    </LinearLayout>

</merge>