<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textEncabezado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:font="@font/montserrat_bold"
        android:textColor="@color/gob_dark"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/text_contact" />

    <TextView
        android:id="@+id/textDepartamento"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:font="@font/montserrat_bold"
        android:textColor="@color/gob_dark"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEncabezado"
        app:layout_constraintVertical_bias="0.048"
        tools:text="@string/text_contact_des" />

    <TextView
        android:id="@+id/textDireccion"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:font="@font/montserrat_regular"
        android:textColor="@color/gob_dark"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDepartamento"
        app:layout_constraintVertical_bias="0.00999999"
        tools:text="@string/text_contact_dir" />

    <TextView
        android:id="@+id/textTelefono"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginEnd="15dp"
        android:font="@font/montserrat_regular"
        android:textColor="@color/gob_gold"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textDireccion"
        app:layout_constraintVertical_bias="0.0"
        tools:text="5523232323" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:font="@font/montserrat_regular"
        android:text="@string/text_contact_tel"
        android:textColor="@color/gob_dark"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDireccion"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textExtensiones"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:font="@font/montserrat_regular"
        android:textColor="@color/gob_dark"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTelefono"
        app:layout_constraintVertical_bias="0.029999971"
        tools:text="@string/text_contact_ext" />

    <TextView
        android:id="@+id/textCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:font="@font/montserrat_regular"
        android:textColor="@color/gob_gold"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textExtensiones"
        app:layout_constraintVertical_bias="0.029999971"
        tools:text="@string/text_contact_corr" />


</androidx.constraintlayout.widget.ConstraintLayout>
